<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <groupId>uk.ac.gate.plugins</groupId>
  <artifactId>format-bdoc</artifactId>
  <version>1.5-SNAPSHOT</version>
  <name>Format: Bdoc</name>
  <description>
    Plugin to save/load GATE documents in BasicDocument 
    representation as JSON and Gzip-compressed JSON
  </description>
  <url>https://gatenlp.github.io/gateplugin-Format_Bdoc/</url>
  <organization>
    <name>GATE</name>
    <url>http://gate.ac.uk</url>
  </organization>
  <developers>
    <developer>
      <name>Johann Petrak</name>
      <email>johann.petrak@gmail.com</email>
      <organization>GATE Team</organization>
      <organizationUrl>https://gate.ac.uk</organizationUrl>
    </developer>
    <developer>
      <id>gate-team</id>
      <name>GATE Team</name>
      <email>gate-developers@lists.sourceforge.net</email>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:git://github.com/GateNLP/gateplugin-Format_Bdoc.git</connection>
    <developerConnection>scm:git:git@github.com:GateNLP/gateplugin-Format_Bdoc.git</developerConnection>
    <url>https://github.com/GateNLP/gateplugin-Format_Bdoc</url>
  </scm>
  <parent>
    <groupId>uk.ac.gate</groupId>
    <artifactId>gate-plugin-base</artifactId>
    <version>9.0-SNAPSHOT</version> <!-- eventually 9.0? -->
    <relativePath/>
  </parent>
  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <gate-core.version>9.0-SNAPSHOT</gate-core.version>
  </properties>
  <licenses>
    <license>
      <name>GNU Lesser General Public License (LGPL), Version 3</name>
      <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <dependencies>
    <dependency>
      <groupId>org.msgpack</groupId>
      <artifactId>jackson-dataformat-msgpack</artifactId>
      <version>0.8.20</version>
    </dependency>
    <!-- GCP API for the output handler - provided since the handler
			will only be used when running in GCP -->
    <dependency>
      <groupId>uk.ac.gate</groupId>
      <artifactId>gcp-api</artifactId>
      <version>3.0-SNAPSHOT</version>
      <scope>compile</scope>
      <exclusions>
        <exclusion>
          <groupId>uk.ac.gate</groupId>
          <artifactId>gate-core</artifactId>
        </exclusion>
        <exclusion>
          <groupId>log4j</groupId>
          <artifactId>log4j</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-core</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-1.2-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.jr</groupId>
      <artifactId>jackson-jr-objects</artifactId>
      <version>2.10.3</version>
      <exclusions>
        <exclusion>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
<!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
<dependency>
    <groupId>org.yaml</groupId>
    <artifactId>snakeyaml</artifactId>
    <version>1.26</version>
</dependency>

  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.1.1</version>
        <executions>
          <execution>
            <id>before-integration-tests</id>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <phase>integration-test</phase>
            <configuration>
          </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <skip>true</skip>
        </configuration>
        <executions>
          <execution>
            <id>unit-tests</id>
            <goals>
              <goal>test</goal>
            </goals>
            <phase>test</phase>
            <configuration>
              <skip>false</skip>
              <excludes>
                <exclude>**/integration/*.java</exclude>
              </excludes>
            </configuration>
          </execution>
          <execution>
            <id>integration-tests</id>
            <goals>
              <goal>test</goal>
            </goals>
            <phase>integration-test</phase>
            <configuration>
              <skip>false</skip>
              <excludes>
                <exclude>none</exclude>
              </excludes>
              <includes>
                <include>**/integration/*.java</include>
              </includes>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <configuration>
          <findbugsXmlOutput>true</findbugsXmlOutput>
          <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
          <excludeFilterFile>src/build/resources/findbugs-excluded.xml</excludeFilterFile>
          <xmlOutput>true</xmlOutput>
          <effort>Max</effort>
          <threshold>Low</threshold>
          <maxHeap>1024</maxHeap>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
  <modelVersion>4.0.0</modelVersion>
</project>
